--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,19 @@ services:
   - docker
 
 before_install:
-  - docker build -f Dockerfile.dev -t adi/docker-react . 
+  - docker build -f Dockerfile.dev -t adi/docker-react .
 
-script: 
+script:
   - docker run -e "CI=true" adi/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "docker-study"
+  env: "Dockerstudy-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-439260998709"
+  buchet_path: "docker-study"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
